# proof-of-portfolio

./: .gitbook.yaml  .gitignore  .pre-commit-config.yaml  README.md  README_noir_interface.md  compile_bb.sh  demo.py  install.sh  proof-of-portfolio.code-workspace  pydoc-markdown.yml  pyproject.toml  run_component_tests.sh  run_scoring.py  setup.cfg  setup.py
.github/workflows/: build-bb.yml  component-tests.yml  publish.yml  test-e2e.yml  test-installation.yml  test_installation.py  test_prove.py
circuits/: MerkleProver.toml  Nargo.toml  Prover.toml  generate_inputs.py  miner_scoring.nr
circuits/components/: Nargo.toml
circuits/proofs/: proof
circuits/src/: edge_case_tests.nr  extreme_value_tests.nr  integration_tests.nr  main.nr  merkle_tests.nr  returns_calculation_tests.nr  test_calmar.nr  test_core_functions.nr  test_merkle_functions.nr  test_utils_functions.nr
circuits/tree-verification/: merkleTree.circom  signalHasher.circom  signal_verifier.circom
circuits/verification_key/: vk
demo/just_calmar/: Nargo.toml
demo/just_cps_to_log_return/: Prover.toml  compare_baseline.py  pyproject.toml
demo/just_drawdown/: Prover.toml  compare_baseline.py  generate_input.py  log_returns.npy  pyproject.toml
docs/sdk/: README.md
instant_mdd/: Nargo.toml
proof_of_portfolio/: __init__.py  miner.py  post_install.py  proof_generator.py  signal_processor.py  validator.py  verifier.py
returns_generator/: Nargo.toml
src/: _version.py  analyse_data.py  analyze_data.py  main.py  miner.py  noir_interface.py  test_miner_scoring.py  test_noir_scoring.py  validator.py
(+58 files in other folders)
