
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-of-portfolio"
version = "1.0.0"
description = "Proof of Portfolio CLI"
authors = [{ name = "Inference Labs, Inc.", email = "info@inferencelabs.com" }]
requires-python = ">=3.10"
dependencies = ["numpy", "colorama", "matplotlib", "toml"]

[project.scripts]
pop = "src.main:main"
